--- a/app/index.html
+++ b/app/index.html
@@ -86,10 +86,10 @@
   become a well-oiled collaboration machine.</p>
       <div class="blockName">
         <div class="nameImg"><img src="./img/_src/profile-1.jpg" alt="">
-          <div class="nameDescription">
-            <p class="name">Satish Patel</p>
-            <p class="description">Founder & CEO, Huddle</p>
-          </div>
+        </div>
+        <div class="nameDescription">
+          <p class="name">Satish Patel</p>
+          <p class="description">Founder & CEO, Huddle</p>
         </div>
       </div>
     </article>
@@ -97,11 +97,10 @@
       <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
   become a well-oiled collaboration machine.</p>
       <div class="blockName">
-        <div class="nameImg"><img src="./img/_src/profile-2.jpg" alt="">
-          <div class="nameDescription">
-            <p class="name">Bruce McKenzie</p>
-            <p class="description">Founder & CEO, Huddle</p>
-          </div>
+        <div class="nameImg"><img src="./img/_src/profile-2.jpg" alt=""></div>
+        <div class="nameDescription">
+          <p class="name">Bruce McKenzie</p>
+          <p class="description">Founder & CEO, Huddle</p>
         </div>
       </div>
     </article>
@@ -109,11 +108,10 @@
       <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
   become a well-oiled collaboration machine.</p>
       <div class="blockName">
-        <div class="nameImg"><img src="./img/_src/profile-3.jpg" alt="">
-          <div class="nameDescription">
-            <p class="name">Iva Boyd</p>
-            <p class="description">Founder & CEO, Huddle</p>
-          </div>
+        <div class="nameImg"><img src="./img/_src/profile-3.jpg" alt=""></div>
+        <div class="nameDescription">
+          <p class="name">Iva Boyd</p>
+          <p class="description">Founder & CEO, Huddle</p>
         </div>
       </div>
     </article>
