Settings block "Comment" and "Call form"

--- a/app/index.html
+++ b/app/index.html
@@ -82,8 +82,7 @@
   </section>
   <section class="mainComment maxWidth">
     <article>
-      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-  become a well-oiled collaboration machine.</p>
+      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
       <div class="blockName">
         <div class="nameImg"><img src="./img/_src/profile-1.jpg" alt="">
         </div>
@@ -94,8 +93,7 @@
       </div>
     </article>
     <article>
-      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-  become a well-oiled collaboration machine.</p>
+      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
       <div class="blockName">
         <div class="nameImg"><img src="./img/_src/profile-2.jpg" alt=""></div>
         <div class="nameDescription">
@@ -105,8 +103,7 @@
       </div>
     </article>
     <article>
-      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has
-  become a well-oiled collaboration machine.</p>
+      <p>Fylo has improved our team productivity by an order of magnitude. Since making the switch our team has become a well-oiled collaboration machine.</p>
       <div class="blockName">
         <div class="nameImg"><img src="./img/_src/profile-3.jpg" alt=""></div>
         <div class="nameDescription">
@@ -154,7 +151,7 @@
 
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Thr0TT1e</a>.
+      Coded by <a href="https://github.com/Thr0TT1e">Thr0TT1e</a>.
     </p>
   </div>
 </footer>
