--- a/app/index.html
+++ b/app/index.html
@@ -125,28 +125,35 @@
         <button>Get Started For Free</button>
       </div>
     </div>
-    <div class="footerLogo"></div>
+    <div class="footerLogo"><img src="img/_src/logo.svg" alt="Logotip"></div>
     <div class="blockFooter">
       <div class="location">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-           magna aliqua</p>
+        <div class="locationIcon"><img src="img/_src/icon-location.svg"></div>
+        <div class="locationText"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua</p></div>
       </div>
       <div class="contacts">
-        <p class="tel">+1-543-123-4567</p>
-        <p class="mail">example@fylo.com</p>
+        <div class="contactsPhone"><img src="img/_src/icon-phone.svg" alt=""></div>
+        <div><p class="tel">+1-543-123-4567</p></div>
+        <div class="contactsEmail"><img src="img/_src/icon-email.svg" alt=""></div>
+        <div><p class="mail">example@fylo.com</p></div>
       </div>
       <div class="footerMenu">
         <ul>
-          <li>About Us</li>
-          <li>Jobs</li>
-          <li>Press</li>
-          <li>Blog</li>
-          <li>Contact Us</li>
-          <li>Terms</li>
-          <li>Privacy</li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact Us</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
         </ul>
       </div>
-      <div class="socials"><a href=""></a><a href=""></a><a href=""></a></div>
+      <div class="socials">
+        <a href="#"><img src="img/_src/facebook-circled-100.png" alt=""></a>
+        <a href="#"><img src="img/_src/twitter-circled-100.png" alt=""></a>
+        <a href="#"><img src="img/_src/instagram-100.png" alt=""></a>
+      </div>
     </div>
 
     <p class="attribution">
