--- a/app/index.html
+++ b/app/index.html
@@ -23,9 +23,9 @@
       </div>
       <div class="menu">
         <ul>
-          <li>Features</li>
-          <li>Team</li>
-          <li>Sign In</li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Sign In</a></li>
         </ul>
       </div>
     </div>
